# dora-sanity-experiment

./: .gitignore  CITATION.cff  README.md  README_EN.md  analyze_extension.py  analyze_results.py  analyze_robustness.py  make_extension_figures.py  make_figures.py  pyproject.toml  requirements.txt  run_confirmatory.py  run_data_sweep.py  run_digits.py  run_synthetic.py  run_synthetic_optimization.py
.github/workflows/: build-final-ru-poster.yml
docs/: CHART_MAP.md  DEFENSE_NOTES.md  EXTENSION_PROTOCOL.md  EXTENSION_VALIDATION.md  POSTER_TEXT_RU.md  POST_REVIEW_CALIBRATION.md  RESEARCH_REPORT.md  ROBUSTNESS_VALIDATION.md  VALIDATION.md
notebooks/: AIRI_DoRA_confirmatory_study.ipynb  AIRI_DoRA_experiment_clean_final.ipynb  AIRI_DoRA_geometry_study.ipynb
poster/: Lapin_Vladislav_DoRA_AIRI_2026.pptx  Lapin_Vladislav_DoRA_AIRI_2026_RU.pptx  Lapin_Vladislav_DoRA_poster_AIRI_2026.pptx  README.md
report/: DoRA_AIRI_technical_report.html  technical_report_artifact.json
results/: AIRI_DoRA_multi_seed_results.csv  AIRI_DoRA_summary_results.csv  extension_accuracy_summary.csv  extension_paired_comparisons.csv  extension_validation.json  key_metrics.json  robustness_validation.json
results/confirmatory_cnn/: confirmatory_runs.csv  confirmatory_summary.csv  pilot_runs.csv  pilot_summary.csv  run_metadata.json  selected_configs.csv
scripts/: build_notebook.py  build_poster_pdf.py  build_poster_ru.js  build_technical_report.py  extract_poster_logos.py  generate_qr.py  make_poster_assets_ru.py  normalize_ru_terminology.py
src/dora_study/: __init__.py  (+3 more)
tests/: test_core.py
(+30 files in other folders)
